--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "buffer": "^6.0.3",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.3.1",
@@ -19,6 +20,8 @@
     "prettier": "1.19.1"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
     "html-literal": "^1.1.0",
     "lodash": "^4.17.21",
     "navigo": "^8.11.1",
