--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "parcel-build": "parcel build index.html && cp _redirects ./dist/",
+    "parcel-build": "parcel build index.html",
     "serve": "parcel index.html"
   },
   "keywords": [],
